# passive-opensky-collection

./: README.md  collectData.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
