[tool.poetry]
name = "passive-opensky-collection"
version = "1.1.1"
description = "Python 3.x repo for passively collecting data from OpenSky using the OpenSky API."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^2.0.0"
opensky-api = {git = "https://github.com/openskynetwork/opensky-api.git", subdirectory = "python"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
